--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18"
   },
